# dynamic_bitset

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  default.shell.nix  shell.nix
sandbox/: demo.cpp  example01.cpp  example02.cpp  test01.cpp  test02.cpp
src/: CMakeLists.txt  bitset.hpp  field.hpp  matrix.hpp
tests/: CMakeLists.txt  unit_field_bitset.cpp  unit_field_matrix.cpp
tests/sandbox/: CMakeLists.txt  demo.cpp  example01.cpp  example01.s  example02.cpp  example02.s  test01.cpp  test02.cpp
tests/unit/: CMakeLists.txt  test_field_bitset.cpp  test_field_matrix.cpp  unit_field_bitset.cpp  unit_field_matrix.cpp
